--- a/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5/dragonv5_main_summary.html
+++ b/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5/dragonv5_main_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>dragonv5_main Project Status (03/12/2018 - 12:41:21)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>dragonv5_main Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>DragonHDL5.xise</TD>
@@ -551,10 +551,10 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>ŒŽ 3 12 12:41:06 2018</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>ŒŽ 3 12 12:41:13 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>‰Î 4 17 15:15:57 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CTA_PC/Desktop/Firmware/dragonHDL_V5/20171023_hdl_dv5_3_00_00/DragonHDL5\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>‰Î 4 17 15:16:02 2018</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 03/12/2018 - 12:41:21</center>
+<br><center><b>Date Generated:</b> 04/20/2018 - 22:17:11</center>
 </BODY
